# AHRS

./: .gitignore  CMakeLists.txt  LICENSE  QuaternionFromMatrix  QuaternionFromMatrix.cpp  QuaternionFromMatrix.h  README.md  RefFrame.h  RotationMatrix.cpp  main.cpp
complementary_filter/: AHRS.cpp  AHRS.h
data/ios/: deviceMotionSamplesRotated.csv
filter/: ComplementaryFilter.cpp  ComplementaryFilter.h
model/: CMakeLists.txt  Mat3x3.h  Quaternion.h  RotationMatrix.cpp  RotationMatrix.h  Vector.h
operator/: QuatMult.cpp  QuatMult.h  QuatRot.cpp  QuatRot.h  quat_mult.cpp  quat_mult.h  quat_rot.cpp  quat_rot.h
test/: QuaternionTest.cpp  QuaternionTests.cpp  RotationMatrixTest.cpp  RotationMatrixTests.cpp  VectorTest.cpp  VectorTests.cpp
